--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!doctype html>
 <html lang="sv">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles/main.scss">
-    <title>Laboration 3 - SASSy Café</title>
-  </head>
-  <body>
-    <h1>SASSy Café</h1>
-    <script type="module" src="/src/js/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SASSy Café</title>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Hoppa till innehåll</a>
+  <div class="container">
+    <header class="site-header">
+      <h1 class="logo">SASSy Café</h1>
+
+      <nav class="nav">
+        <ul class="nav-ul">
+          <li>
+            <a href="index.html">Start</a>
+          </li>
+          <li>
+            <a href="#">Meny</a>
+          </li>
+          <li>
+            <a href="#">Boka bord</a>
+          </li>
+          <li>
+            <a href="#">Om oss</a>
+          </li>
+          <li>
+            <a href="sass.html">SASS</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main id="main" class="main">
+      <h2>Välkommen!</h2>
+      <p>Lägger in lite text bara för att fylla ut!</p>
+    </main>
+    <footer class="site-footer">
+      <p> &copy; 2026 Fredrika Stjernlöf</p>
+        <p>
+          Denna webbplats har skapats som en del i kursen Frontend-baserad 
+          webbutveckling på Mittuniversitetet i Sundsvall.
+        </p>
+    </footer>
+  </div>
+  <script type="module" src="/src/js/main.js"></script>
+</body>
 </html>
