--- a/sass.html
+++ b/sass.html
@@ -3,11 +3,44 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles/main.scss">
-    <title>Laboration 3 - SASSy Café</title>
+    <title>SASS - SASSy Café</title>
   </head>
   <body>
-    <h1>SASS</h1>
+    <a class="skip-link" href="#main">Hoppa till innehåll</a>
+    <div class="container">
+    <header class="site-header">
+      <h1 class="logo">SASSy Café</h1>
+      <nav class="nav">
+        <ul class="nav-ul">
+          <li>
+            <a href="index.html">Start</a>
+          </li>
+          <li>
+            <a href="#">Meny</a>
+          </li>
+          <li>
+            <a href="#">Boka bord</a>
+          </li>
+          <li>
+            <a href="#">Om oss</a>
+          </li>
+          <li>
+            <a href="sass.html">SASS</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main id="main" class="main">
+      <h2>SASS!</h2>
+      <p>Lägger in lite text bara för att fylla ut!</p>
+    </main>
+    <footer class="site-footer">
+      <p> &copy; 2026 Fredrika Stjernlöf</p>
+        <p>
+          Denna webbplats har skapats som en del i kursen Frontend-baserad 
+          webbutveckling på Mittuniversitetet i Sundsvall.
+        </p>
+    </div>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
