Bygger bildsektion och uppdaterar bildoptimering

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <div class="container">
     <header class="site-header">
       <h1 class="logo">SASSy Café</h1>
-
       <nav class="nav">
         <ul class="nav-ul">
           <li>
@@ -34,17 +33,38 @@
       </nav>
     </header>
     <main id="main" class="main">
-      <h2>Välkommen!</h2>
-      <p>Lägger in lite text bara för att fylla ut!</p>
+      <section class="hero">
+        <img class="hero-img" src="/images/header1.webp" alt="Färgglada munkar med glasyr och strössel">
+        <div class="hero-content">
+          <h2>Välkommen till SASSy Café!</h2>
+          <p>Ett pastellfärgat café fyllt med doften av nybryggt kaffe
+            och nygräddade färgsprakande bakverk.</p>
+        </div>
+      </section>
+
+      <section class="featured">
+        <h2>Våra favoriter</h2>
+        <p>Munkar, bakverk och kaffe – alltid med extra strössel.</p>
+        <img class="featured-img" src="/images/bild1.webp" alt="Nygräddade munkar i pastellfärger">
+        <img class="featured-img" src="/images/bild2.webp" alt="">
+        <img class="featured-img" src="/images/bild3.webp" alt="">
+        <img class="featured-img" src="/images/bild4.webp" alt="">
+        <img class="featured-img" src="/images/bild5.webp" alt="">
+        <img class="featured-img" src="/images/bild6.webp" alt="">
+        <img class="featured-img" src="/images/bild7.webp" alt="">
+        <img class="featured-img" src="/images/bild8.webp" alt="">
+        <img class="featured-img" src="/images/bild9.webp" alt="">
+      </section>
     </main>
     <footer class="site-footer">
       <p> &copy; 2026 Fredrika Stjernlöf</p>
-        <p>
-          Denna webbplats har skapats som en del i kursen Frontend-baserad 
-          webbutveckling på Mittuniversitetet i Sundsvall.
-        </p>
+      <p>
+        Denna webbplats har skapats som en del i kursen Frontend-baserad
+        webbutveckling på Mittuniversitetet i Sundsvall.
+      </p>
     </footer>
   </div>
   <script type="module" src="/src/js/main.js"></script>
 </body>
+
 </html>
