Uppdaterar innehåll i index.html och sass.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="icon" href="/favicon-donut.svg" type="image/svg+xml">
   <title>SASSy Café</title>
 </head>
 
@@ -41,19 +45,20 @@
             och nygräddade färgsprakande bakverk.</p>
         </div>
       </section>
-
       <section class="featured">
         <h2>Våra favoriter</h2>
         <p>Munkar, bakverk och kaffe – alltid med extra strössel.</p>
-        <img class="featured-img" src="/images/bild1.webp" alt="Nygräddade munkar i pastellfärger">
-        <img class="featured-img" src="/images/bild2.webp" alt="">
-        <img class="featured-img" src="/images/bild3.webp" alt="">
-        <img class="featured-img" src="/images/bild4.webp" alt="">
-        <img class="featured-img" src="/images/bild5.webp" alt="">
-        <img class="featured-img" src="/images/bild6.webp" alt="">
-        <img class="featured-img" src="/images/bild7.webp" alt="">
-        <img class="featured-img" src="/images/bild8.webp" alt="">
-        <img class="featured-img" src="/images/bild9.webp" alt="">
+        <div class="featured-grid">
+          <img class="featured-img" src="/images/bild2.webp" alt="Bild av kaffekopp uppifrån stående bland kaffebönor.">
+          <img class="featured-img" src="/images/bild1.webp" alt="Munkara i pastellfärger med strössel på.">
+          <img class="featured-img" src="/images/bild3.webp" alt="En muffins med chokladtopping och hasselnötter.">
+          <img class="featured-img" src="/images/bild4.webp" alt="Tre munkar med glasyr och strössel.">
+          <img class="featured-img" src="/images/bild5.webp" alt="Kaka toppad med grädde, färska jordgubbar, blåbär och hallon.">
+          <img class="featured-img" src="/images/bild6.webp" alt="Makroner i pastelliga färger.">
+          <img class="featured-img" src="/images/bild7.webp" alt="Tre kaffemått med kaffebönor, malt kaffe och tillagat kaffe.">
+          <img class="featured-img" src="/images/bild8.webp" alt="Närbild av cupcakes toppade med strössel.">
+          <img class="featured-img" src="/images/bild9.webp" alt="Tårta toppad med rosa glasyr, grädde, färska körsbär och strössel.">
+        </div>
       </section>
     </main>
     <footer class="site-footer">
