--- a/sass.html
+++ b/sass.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="sv">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SASS - SASSy Café</title>
-  </head>
-  <body>
-    <a class="skip-link" href="#main">Hoppa till innehåll</a>
-    <div class="container">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="icon" href="/favicon-donut.svg" type="image/svg+xml">
+  <title>SASS - SASSy Café</title>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Hoppa till innehåll</a>
+  <div class="container">
     <header class="site-header">
       <h1 class="logo">SASSy Café</h1>
       <nav class="nav">
@@ -31,16 +37,75 @@
       </nav>
     </header>
     <main id="main" class="main">
-      <h2>SASS!</h2>
-      <p>Lägger in lite text bara för att fylla ut!</p>
+      <section class="sass-page">
+        <div class="hero">
+          <img class="hero-img" src="/images/header2.webp" alt="Färgglatt strössel i närbild">
+          <h2 class="hero-sass">Utvärdering – att jobba med SASS!</h2>
+        </div>
+          <h3>Introduktion</h3>
+          <p>
+            Att arbeta med SASS har varit både roligt och frustrerande – på ett bra sätt. I början kändes det nästan som
+            att jag skrev helt vanlig CSS, och jag undrade lite vad poängen egentligen var. Men ju mer jag provade på,
+            desto tydligare blev det varför SASS är kraftfullt.
+          </p>
+
+          <h3>Variabler och struktur</h3>
+          <p>
+            Variabler för färger var det som först kändes riktigt logiskt. Att kunna byta en färg på ett ställe och se
+            hela temat ändras var både praktiskt och riktigt tillfredsställande. När jag började arbeta med både ljust
+            och
+            mörkt
+            tema blev det ännu tydligare hur värdefullt det är att ha strukturerade färgvariabler.
+          </p>
+          <p>
+            Jag fick också bättre förståelse för hur man delar upp sin styling i flera filer och kopplar ihop dem med
+            @use. Även här tog det en stund innan jag förstod hur man behöver länka ihop filer för att allt ska fungera,
+            och små fel kunde ge ganska kryptiska felmeddelanden. Det krävdes att jag verkligen förstod vad som
+            importerades var och hur variabler faktiskt når olika delar av koden.
+          </p>
+
+          <h3>Mixins och @extend</h3>
+          <p>
+            Det som verkligen fick poletten att trilla ner var arbetet med mixins och @extend. I början kändes det lite
+            abstrakt – varför inte bara skriva färgen direkt? Men när jag började använda en mixin för att automatiskt
+            välja textfärg baserat på bakgrund förstod jag idén: det handlar inte om att välja en färg, utan om att
+            skapa logik.
+          </p>
+          <p>
+            I början var det väldigt rörigt, särskilt när olika regler skrev över varandra och saker inte betedde sig
+            som
+            jag trodde.
+            Men när jag väl fick det att fungera kunde jag också se fördelarna.
+          </p>
+
+          <h3>Utmaningar och insikter</h3>
+          <p>
+            En av dom större utmaningarna var att förstå hur olika regler påverkar varandra, särskilt i kombination med
+            dark mode. Ibland fungerade saker inte som jag tänkt, och det krävdes att jag stannade upp och verkligen
+            funderade över vad som faktiskt hände i koden.
+          </p>
+          <p>
+            Samtidigt märker jag att det är lätt att göra saker mer komplicerade än vad dom behöver vara. Ibland är en
+            enkel lösning bättre än en smart lösning. Det är nog en av de viktigaste insikterna jag tar med mig.
+          </p>
+
+          <h3>Sammanfattning</h3>
+          <p>
+            Sammanfattningsvis har SASS gjort det tydligare hur man kan strukturera större CSS-projekt, och även om det
+            stundvis varit frustrerande (när man inte riktigt greppat vad man håller på med än). Det har varit en
+            nyttig, och faktiskt riktigt kul process. Det bästa med den här uppgiften var att den verkligen gav utrymme för
+            kreativitet och att maxa stylingen, jag ser fram emot att lära mig ännu mer!
+          </p>
+      </section>
     </main>
     <footer class="site-footer">
       <p> &copy; 2026 Fredrika Stjernlöf</p>
-        <p>
-          Denna webbplats har skapats som en del i kursen Frontend-baserad 
-          webbutveckling på Mittuniversitetet i Sundsvall.
-        </p>
-    </div>
-    <script type="module" src="/src/js/main.js"></script>
-  </body>
+      <p>
+        Denna webbplats har skapats som en del i kursen Frontend-baserad
+        webbutveckling på Mittuniversitetet i Sundsvall.
+      </p>
+  </div>
+  <script type="module" src="/src/js/main.js"></script>
+</body>
+
 </html>
