Responsiv mobilmeny, förbättrad hero, touchytor och layoutjusteringar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <a class="skip-link" href="#main">Hoppa till innehåll</a>
   <div class="container">
     <header class="site-header">
-      <h1 class="logo">SASSy Café</h1>
+      <div class="brand">
+        <a href="index.html" class="brand-link">
+        <img class="brand-icon" src="/favicon-donut.svg" alt="" aria-hidden="true">
+        <h1 class="logo">SASSy Café</h1>
+        </a>
+      </div>
       <nav class="nav">
         <ul class="nav-ul">
           <li>
