Ordnar renare sökvägar och  innan vidare tester

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <header class="site-header">
       <div class="brand">
-        <a href="index.html" class="brand-link">
+        <a href="/" class="brand-link">
         <img class="brand-icon" src="/favicon-donut.svg" alt="" aria-hidden="true">
         <h1 class="logo">SASSy Café</h1>
         </a>
@@ -24,7 +24,7 @@
       <nav class="nav">
         <ul class="nav-ul">
           <li>
-            <a href="index.html">Start</a>
+            <a href="/">Start</a>
           </li>
           <li>
             <a href="#">Meny</a>
@@ -36,7 +36,7 @@
             <a href="#">Om oss</a>
           </li>
           <li>
-            <a href="sass.html">SASS</a>
+            <a href="/SASS">SASS</a>
           </li>
         </ul>
       </nav>
