--- a/sass.html
+++ b/sass.html
@@ -24,7 +24,7 @@
       <nav class="nav">
         <ul class="nav-ul">
           <li>
-            <a href="index.html">Start</a>
+            <a href="/">Start</a>
           </li>
           <li>
             <a href="#">Meny</a>
@@ -36,7 +36,7 @@
             <a href="#">Om oss</a>
           </li>
           <li>
-            <a href="sass.html">SASS</a>
+            <a href="/SASS">SASS</a>
           </li>
         </ul>
       </nav>
