--- a/sass.html
+++ b/sass.html
@@ -50,57 +50,53 @@
         <h3>Introduktion</h3>
         <p>
           Att arbeta med SASS har varit både roligt och frustrerande – på ett bra sätt. I början kändes det nästan som
-          att jag skrev helt vanlig CSS, och jag undrade lite vad poängen egentligen var. Men ju mer jag provade på,
-          desto tydligare blev det varför SASS är kraftfullt.
+          att jag skrev helt vanlig CSS, och jag förstod inte riktigt poängen. Men ju mer jag provade på,
+          desto tydligare blev det varför SASS är så kraftfullt - och kul!
         </p>
 
         <h3>Variabler och struktur</h3>
         <p>
-          Variabler för färger var det som först kändes riktigt logiskt. Att kunna byta en färg på ett ställe och se
+          Variabler för färger kändes logiskt redan från början. Att kunna byta en färg på ett ställe och se
           hela temat ändras var både praktiskt och riktigt tillfredsställande. När jag började arbeta med både ljust
-          och
-          mörkt
-          tema blev det ännu tydligare hur värdefullt det är att ha strukturerade färgvariabler.
+          och mörkt tema blev det ännu tydligare hur värdefullt det är att ha strukturerade färgvariabler.
         </p>
         <p>
           Jag fick också bättre förståelse för hur man delar upp sin styling i flera filer och kopplar ihop dem med
           @use. Även här tog det en stund innan jag förstod hur man behöver länka ihop filer för att allt ska fungera,
-          och små fel kunde ge ganska kryptiska felmeddelanden. Det krävdes att jag verkligen förstod vad som
+           små fel kunde ge ganska kryptiska felmeddelanden. Det krävdes att jag verkligen förstod vad som
           importerades var och hur variabler faktiskt når olika delar av koden.
         </p>
 
         <h3>Mixins och @extend</h3>
         <p>
           Det som verkligen fick poletten att trilla ner var arbetet med mixins och @extend. I början kändes det lite
-          abstrakt – varför inte bara skriva färgen direkt? Men när jag började använda en mixin för att automatiskt
-          välja textfärg baserat på bakgrund förstod jag idén: det handlar inte om att välja en färg, utan om att
-          skapa logik.
+          abstrakt – speciellt eftersom det strulade lite för mig – varför inte bara skriva färgen direkt? Men när jag 
+          började använda en mixin för att automatiskt välja textfärg baserat på bakgrund förstod jag idén: det handlar 
+          inte om att välja en färg, utan om att skapa logik.
         </p>
         <p>
           I början var det väldigt rörigt, särskilt när olika regler skrev över varandra och saker inte betedde sig
-          som
-          jag trodde.
-          Men när jag väl fick det att fungera kunde jag också se fördelarna.
+          som jag trodde. Men när jag väl fick det att fungera kunde jag också se fördelarna.
         </p>
 
         <h3>Utmaningar och insikter</h3>
         <p>
           En av dom större utmaningarna var att förstå hur olika regler påverkar varandra, särskilt i kombination med
-          dark mode. Ibland fungerade saker inte som jag tänkt, och det krävdes att jag stannade upp och verkligen
-          funderade över vad som faktiskt hände i koden.
+          dark mode. Ibland fungerade saker inte som jag hade tänkt, då blev jag tvungen att stanna upp och verkligen
+          fundera över vad som faktiskt hände i koden.
         </p>
         <p>
-          Samtidigt märker jag att det är lätt att göra saker mer komplicerade än vad dom behöver vara. Ibland är en
-          enkel lösning bättre än en smart lösning. Det är nog en av de viktigaste insikterna jag tar med mig.
+          Jag har märkt att det är lätt att göra saker mer komplicerade än vad dom behöver vara. Ibland är en
+          enkel lösning bättre än en (kanske smart) men komplicerad lösning. Det är nog en av de viktigaste insikterna 
+          jag tar med mig.
         </p>
 
         <h3>Sammanfattning</h3>
         <p>
-          Sammanfattningsvis har SASS gjort det tydligare hur man kan strukturera större CSS-projekt, och även om det
+          Sammanfattningsvis har arbetet med SASS gjort det tydligare hur man kan strukturera större CSS-projekt, även om det
           stundvis varit frustrerande (när man inte riktigt greppat vad man håller på med än). Det har varit en
           nyttig, och faktiskt riktigt kul process. Det bästa med den här uppgiften var att den verkligen gav utrymme
-          för
-          kreativitet och att maxa stylingen, jag ser fram emot att lära mig ännu mer!
+          för kreativitet och att maxa stylingen, jag ser fram emot att lära mig ännu mer!
         </p>
       </section>
     </main>
