--- a/sass.html
+++ b/sass.html
@@ -101,11 +101,12 @@
       </section>
     </main>
     <footer class="site-footer">
-      <p> &copy; 2026 Fredrika Stjernlöf</p>
+      <p>&copy; 2026 Fredrika Stjernlöf</p>
       <p>
         Denna webbplats har skapats som en del i kursen Frontend-baserad
         webbutveckling på Mittuniversitetet i Sundsvall.
       </p>
+    </footer>
   </div>
   <script type="module" src="/src/js/main.js"></script>
 </body>
